slack_stale_pr: update message

--- a/.github/workflows/slack_stale_pr.yml
+++ b/.github/workflows/slack_stale_pr.yml
@@ -19,7 +19,6 @@ jobs:
         uses: slackapi/slack-github-action@v1.27.1
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-message: "Stale PRs in sourcecred repo: \n$LOCAL_PR"
+          slack-message: "Stale PRs in sourcecred repo: \n${{ steps.local.outputs.message }}"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          LOCAL_PR: ${{ steps.local.outputs.message }}"
