slack_stale_pr testing labels

--- a/.github/workflows/slack_stale_pr.yml
+++ b/.github/workflows/slack_stale_pr.yml
@@ -14,6 +14,8 @@ jobs:
         uses: paritytech/stale-pr-finder@main
         with:
           GITHUB_TOKEN: ${{ github.token }}
+          days-stale: 14
+          requiredLabels: javascript
       - name: Post to a Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.27.1
