slack_stale_pr revert test version

--- a/.github/workflows/slack_stale_pr.yml
+++ b/.github/workflows/slack_stale_pr.yml
@@ -9,19 +9,12 @@ jobs:
   fetch-PRs:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch pull requests
         id: local
-        uses: bretg/stale-pr-finder@main
+        uses: paritytech/stale-pr-finder@main
         with:
           GITHUB_TOKEN: ${{ github.token }}
           days-stale: 14
-          ignoredLabels: javascript
       - name: Post to a Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.27.1
