--- a/.github/workflows/slack_stale_pr.yml
+++ b/.github/workflows/slack_stale_pr.yml
@@ -2,8 +2,8 @@ name: Find stale PRs
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron:  '0 9 * * *'
+#  schedule:
+#    - cron:  '0 9 * * *'
 
 jobs:
   fetch-PRs:
