--- a/.github/workflows/slack_stale_pr.yml
+++ b/.github/workflows/slack_stale_pr.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ github.token }}
           days-stale: 14
-          requiredLabels: 'good first issue'
+          requiredLabels: 'github_actions'
 #      - name: Post to a Slack channel
 #        id: slack
 #        uses: slackapi/slack-github-action@v1.27.1
