--- a/.github/workflows/code-path-changes.yml
+++ b/.github/workflows/code-path-changes.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - '**'
 
+env:
+  EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+  EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -15,4 +19,4 @@ jobs:
       - name: Run Notification Script
         run: |
           chmod +x test/send_notification_on_change.sh
-          ./test//send_notification_on_change.sh
+          ./test/send_notification_on_change.sh
