--- a/.github/workflows/code-path-changes.yml
+++ b/.github/workflows/code-path-changes.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install axios
+        run: npm install axios nodemailer
 
       - name: Run Notification Script
         run: |
