--- a/.github/workflows/code-path-changes.yml
+++ b/.github/workflows/code-path-changes.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install axios nodemailer googleapis
+        run: npm install axios nodemailer
 
       - name: Run Notification Script
         run: |
