--- a/.github/workflows/code-path-changes.yml
+++ b/.github/workflows/code-path-changes.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js (if using JavaScript/Node.js script)
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
